<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_header_gcm"/>
    <Preference
        android:key="REG_ID"
        android:title="REG ID"
        android:summary="" />
    <Preference
        android:key="gcm_registration"
        android:title="@string/pref_info_gcm_register"
        android:summary=""/>

    <PreferenceCategory android:title="@string/pref_app_info"/>
    <Preference
        android:key="app_ver"
        android:title="@string/pref_info_app_ver"
        android:summary=""
        />
    <Preference
        android:key="app_release"
        android:title="@string/pref_info_title_app_release"
        android:summary="Release"
        />
    <Preference
        android:key="app_date"
        android:title="@string/pref_info_title_app_date"
        android:summary="2016. 06. 09."
        />
    <Preference
        android:key="app_developer"
        android:title="@string/pref_info_developer"
        android:summary="Seonwoo Kim, Geonju Cho, Juhang Lee"
        />
    <Preference
        android:key="app_developer_mail"
        android:title="@string/pref_info_title_dev_mail"
        android:summary="@string/pref_info_developer_mail2">
        <intent android:action="android.intent.action.VIEW"
            android:data="@string/pref_info_developer_mail"/>
    </Preference>
    <Preference
        android:title="@string/pref_info_title_dev_web"
        android:summary="@string/pref_info_developer_web">
        <intent android:action="android.intent.action.VIEW"
            android:data="@string/pref_info_developer_web"/>
    </Preference>
    <Preference
        android:title="@string/pref_info_title_github"
        android:summary="@string/pref_info_developer_web">
        <intent android:action="android.intent.action.VIEW"
            android:data="@string/pref_info_developer_github"/>
    </Preference>
    <Preference
        android:title="@string/pref_info_title_playstore">
        <intent android:action="android.intent.action.VIEW"
            android:data="market://details?id=com.onaries.smarthome"/>
    </Preference>
</PreferenceScreen>