<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header android:fragment="com.onaries.smarthome.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_general"  />
    <header android:fragment="com.onaries.smarthome.SettingsActivity$MultitabPreferenceFragment"
        android:title="@string/pref_header_multitap"  />
    <header android:fragment="com.onaries.smarthome.SettingsActivity$MonitorPreferenceFragment"
        android:title="@string/pref_header_monitor"  />
    <header android:fragment="com.onaries.smarthome.SettingsActivity$BeaconPreferenceFragment"
        android:title="@string/pref_header_beacon"  />
    <header android:fragment="com.onaries.smarthome.SettingsActivity$MonitorPreferenceFragment"
        android:title="@string/pref_header_cloud"  />
    <header android:fragment="com.onaries.smarthome.SettingsActivity$NotificationPreferenceFragment"
        android:title="@string/pref_header_notifications" />
    <header android:fragment="com.onaries.smarthome.SettingsActivity$InfoPreferenceFragment"
        android:title="@string/pref_header_info"  />
</preference-headers>
