<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
    android:layout_width="match_parent" android:background="#ffffff">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.sw.iotproject.LightActivity"
        android:orientation="vertical"
        android:background="#ffffff">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/light_light1"
                android:id="@+id/textView6"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:gravity="center_horizontal" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multitap_on"
                android:id="@+id/lightButton1On"
                android:onClick="multitap1_onClicked"
                android:layout_marginLeft="30dp"
                android:background="@drawable/btn_multitab_on"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multitap_off"
                android:id="@+id/lightButton1Off"
                android:onClick="multitap4_onClicked"
                android:background="@drawable/btn_multitab_off"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multitap_allon"
                android:id="@+id/lightReservedButton"
                android:onClick="multitap7_onClicked"
                android:background="@drawable/btn_reserved_click" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multitap_alloff"
                android:id="@+id/lightHistoryButton"
                android:onClick="multitap8_onClicked"
                android:layout_marginLeft="15dp"
                android:background="@drawable/btn_history_click" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>